# mkl_gemm_sample

./: CMakeLists.txt  main.cpp
